# Work-Function-Algorithm

./: CMakeLists.txt  Makefile  README.md
docs/: ref.bib  report.tex  wfa.tex
src/: configuration.cpp  configuration.h  configurationfactory.cpp  configurationfactory.h  defs.h  main.cpp  point.cpp  point.h  point_impl.cpp  point_impl.h  requestgenerator.cpp  requestgenerator.h  workfunctionalgorithm.cpp  workfunctionalgorithm.h
